tests/ast_tokens/__snapshots__/jsfmt.spec.js.snap
exports[`test foo.js 1`] = `
"// Regex literals require a lexer mode change
/asdf/g;

// JSX also requires a lexer mode change
<div attr1='42' attr2={'asdf'} >asdf</div>;

// Async arrow functions require backtracking
var a = async () => 42;

// Type annotations have a special lex mode
var a: number = 42;

// Token stream should continue even with parse errors
var var
a;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/* Regex literals require a lexer mode change*/
/* JSX also requires a lexer mode change*/
// Async arrow functions require backtracking
// Type annotations have a special lex mode
// Token stream should continue even with parse errors
[object RegExp];
<div attr1="42" attr2={"asdf"}>asdf</div>;
var a = async () => [object Number];
var a: number = [object Number];
var var;
a;
"
`;
